--- a/styles/partials/_colors.scss
+++ b/styles/partials/_colors.scss
@@ -1,3 +1,6 @@
-$color-primary: #FFFFFF;
-$color-background: #323232;
-$color-secondary-text: #AFAFAF;
+$color-bandsite-black: #323232;
+$color-silver: #AFAFAF;
+$color-white: #FFFFFF;
+$color-bandsite-dark-black: #000000;
+$color-mercury: #E1E1E1;
+$color-alabaster: #FAFAFA;
