--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -1,5 +1,20 @@
-$font-stack: Avenir;
+@font-face {
+    font-family: 'AvenirNext LT Pro';
+    src: url('../../assets/fonts/AvenirNextLTPro-Bold.otf') format('opentype');    
+    font-weight: 700;
+    font-style: normal;
+}
 
-body {
-    font-family: $font-stack;
+@font-face {
+    font-family: 'AvenirNext LT Pro';
+    src: url('../../assets/fonts/AvenirNextLTPro-Demi.otf') format('opentype');
+    font-weight: 600;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'AvenirNext LT Pro';
+    src: url('../../assets/fonts/AvenirNextLTPro-Regular.otf') format('opentype');
+    font-weight: 400;
+    font-style: normal;
 }
