--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -11,3 +11,23 @@
         @content;
     }
 }
+
+@mixin page-header-mobile-logo {
+    font-size: 1.5rem;
+    line-height: 2rem;
+    font-weight: 700;
+    max-height: 1.25rem;
+    max-width: 7.5rem;
+}
+
+@mixin subheader-mobile-text {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 600;
+}
+
+@mixin subheader-mobile-reguler-weight {
+    font-size: 0.875rem;
+    line-height: 1.375rem;
+    font-weight: 400;
+}
