--- a/styles/shows.css
+++ b/styles/shows.css
@@ -76,4 +76,80 @@
   width: 100%;
   height: 30vh;
   margin: 1rem;
+}
+
+.buy-tickets-section {
+  margin: 1rem;
+}
+
+.show-title {
+  font-size: 2rem;
+  line-height: 2.5rem;
+  font-weight: 600;
+  padding-top: 1rem;
+}
+@media (min-width: 768px) {
+  .show-title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding-top: 3rem;
+  }
+}
+@media (min-width: 1200px) {
+  .show-title {
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+    font-weight: 600;
+    padding-top: 3rem;
+  }
+}
+
+.shows-card {
+  display: flex;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  font-size: 1rem;
+  font-weight: 600;
+  border-bottom: 1px solid #E1E1E1;
+  flex-direction: column;
+  padding-bottom: 4rem;
+}
+
+.date-label {
+  color: #AFAFAF;
+  font-size: 0.75rem;
+  font-weight: 600;
+  padding: 0.5rem 0;
+}
+
+.venue-label {
+  color: #AFAFAF;
+  font-size: 0.75rem;
+  font-weight: 600;
+  padding: 0.5rem 0;
+}
+
+.location-label {
+  color: #AFAFAF;
+  font-size: 0.75rem;
+  font-weight: 600;
+  padding: 0.5rem 0;
+}
+
+.show-button {
+  background-color: #323232;
+  color: #FFFFFF;
+  display: flex;
+  position: absolute;
+  bottom: 0.625rem;
+  width: 100%;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 1rem;
+  border-radius: 0.25rem;
+  height: 2.5rem;
+  width: 100%;
+  padding: 0.75rem;
 }/*# sourceMappingURL=shows.css.map */
