add comment style on bio page

--- a/styles/global.css
+++ b/styles/global.css
@@ -28,7 +28,6 @@ body {
 header {
   background-color: #323232;
   background-size: cover;
-  /*border-bottom: 0.0625rem stroke $color-mercury;*/
 }
 
 .navbar {
@@ -37,6 +36,7 @@ header {
   align-items: center;
   flex-direction: column;
   color: #FFFFFF;
+  width: 100%;
   padding-bottom: 0.4rem;
 }
 @media (min-width: 768px) {
@@ -44,7 +44,6 @@ header {
     flex-direction: row;
     justify-content: left;
     align-items: center;
-    margin: 0rem 1rem 0rem 2rem;
     padding-bottom: 1.2rem;
   }
 }
@@ -53,7 +52,6 @@ header {
     flex-direction: row;
     justify-content: left;
     align-items: center;
-    margin: 0rem 1rem 0rem 6rem;
   }
 }
 .navbar__title-container {
@@ -61,7 +59,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 2rem 0rem 2rem 0rem;
+  padding: 2rem 0rem 2rem 3rem;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
@@ -73,8 +71,7 @@ header {
     font-size: 3.75rem;
     line-height: 4.25rem;
     flex-direction: row;
-    width: 20%;
-    margin-right: 0.5rem;
+    width: 40%;
     padding-bottom: 1rem;
   }
 }
@@ -83,8 +80,8 @@ header {
     font-size: 3.75rem;
     line-height: 4.25rem;
     flex-direction: row;
-    width: 20%;
-    margin-right: -10rem;
+    width: 40%;
+    padding-left: 11rem;
   }
 }
 .navbar__list {
@@ -102,9 +99,8 @@ header {
     font-size: 1rem;
     max-height: 2rem;
     flex-direction: row;
-    width: 80%;
+    width: 60%;
     padding-top: 3rem;
-    margin-left: -8rem;
   }
 }
 @media (min-width: 1200px) {
@@ -112,7 +108,7 @@ header {
     font-size: 0.75rem;
     max-height: 2rem;
     flex-direction: row;
-    width: 80%;
+    width: 60%;
   }
 }
 .navbar__item {
@@ -122,17 +118,6 @@ header {
 .navbar__second-item {
   width: 50%;
   text-align: center;
-}
-@media (min-width: 768px) {
-  .navbar__second-item {
-    margin-left: -11rem;
-  }
-}
-@media (min-width: 1200px) {
-  .navbar__second-item {
-    margin-left: -22rem;
-    padding-bottom: 0.5rem;
-  }
 }
 .navbar__link {
   display: inline-block;
@@ -150,7 +135,7 @@ header {
 @media (min-width: 768px) {
   .navbar__link--active, .navbar__link:hover {
     padding-bottom: 1rem;
-    width: 28%;
+    width: 33%;
   }
 }
 @media (min-width: 1200px) {
