--- a/styles/global.scss
+++ b/styles/global.scss
@@ -14,7 +14,6 @@ body {
 header {
     background-color: $color-bandsite-black;
     background-size: cover;
-    /*border-bottom: 0.0625rem stroke $color-mercury;*/ 
 }
 
 .navbar {
@@ -23,41 +22,40 @@ header {
     align-items: center;
     flex-direction: column;
     color: $color-white; 
+    width: 100%;
     padding-bottom: 0.4rem;
     @include tablet {
         flex-direction: row;
         justify-content: left;
         align-items: center;
-        margin: 0rem 1rem 0rem 2rem;
         padding-bottom: 1.2rem;
     }
     @include desktop {
         flex-direction: row;
         justify-content: left;
         align-items: center;
-        margin: 0rem 1rem 0rem 6rem;
+       
     }
     &__title-container {
         display: flex;
         justify-content: center;
         align-items: center;
         width: 100%;
-        padding: 2rem 0rem 2rem 0rem;
+        padding: 2rem 0rem 2rem 3rem;
         @include page-header-mobile-logo;
         @include tablet {
             font-size: 3.75rem;
             line-height: 4.25rem;
             flex-direction: row;
-            width: 20%;
-            margin-right: 0.5rem;
+            width: 40%;
             padding-bottom: 1rem;
         }
         @include desktop {
             font-size: 3.75rem;
             line-height: 4.25rem;
             flex-direction: row;
-            width: 20%;
-            margin-right: -10rem;
+            width: 40%;
+            padding-left: 11rem;
         }
     }
     &__list {
@@ -73,31 +71,24 @@ header {
             font-size: 1rem;
             max-height: 2rem;
             flex-direction: row;
-            width: 80%;
+            width: 60%;
             padding-top: 3rem;
-            margin-left: -8rem;
+            
         }
         @include desktop {
             font-size: 0.75rem;
             max-height: 2rem;
             flex-direction: row;
-            width: 80%;
+            width: 60%;
         } 
     }
     &__item {
         width: 50%;
-        text-align: center;    
+        text-align: center;  
     }
     &__second-item {
         width: 50%;
         text-align: center;
-        @include tablet {
-            margin-left: -11rem;
-        }
-        @include desktop {
-            margin-left: -22rem;
-            padding-bottom: 0.5rem;
-        }
     }
     &__link {
         display: inline-block;
@@ -114,7 +105,7 @@ header {
         @include tablet {
             &--active{
                 padding-bottom: 1rem;
-                width: 28%;   
+                width: 33%;   
             }
         }    
         @include desktop {
