--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -25,6 +25,16 @@
         font-weight: 500;
         margin-top: 1.5rem;
         margin-bottom: -1rem;
+        @include tablet {
+            padding-left: 1rem;
+            font-size: 2rem;
+            line-height: 2rem;
+            font-weight: 600;
+            margin-bottom: -2rem;
+        }
+        @include desktop {
+            justify-content: left;
+        }
     }
     &__title {
         font-size: 2rem;
@@ -40,7 +50,8 @@
             font-size: 4rem;
             line-height: 2.75rem;
             font-weight: 600;
-            margin: 2rem 1rem 1rem 6rem;
+            
+            justify-content: left;
         }
     }
     &__title-two {
@@ -48,11 +59,32 @@
         line-height: 3rem; 
         font-weight: 600;
         margin-top: -2rem;
+        @include tablet {
+            font-size: 4rem;
+            line-height: 2.75rem;
+            font-weight: 600;
+            margin: 0rem 1rem 0rem 1rem;
+        }
+        @include desktop {
+            font-size: 4rem;
+            line-height: 2.75rem;
+            font-weight: 600;
+            justify-content: left;
+        }
     }
     &__soundcloud-song {
         width: 100%; 
         height: 30vh;
         margin: 1rem;
+        @include tablet {
+            margin: 2rem;
+            justify-content: center;
+            width: 100%;
+            height: 40vh;
+        }
+        @include desktop {
+            justify-content: right;
+        }
     } 
 }
 
@@ -66,19 +98,19 @@
     line-height: 2.5rem;
     font-weight: 600;
     padding-top: 1rem;
-    
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
         font-weight: 600;
-        padding-top: 3rem;
-        
+        padding-top: 3rem; 
+        padding-left: 1rem; 
     }
     @include desktop {
         font-size: 2.25rem;
         line-height: 2.75rem;
         font-weight: 600;
         padding-top: 3rem;
+        padding-left: 6rem;
        
     } 
     
@@ -94,6 +126,15 @@
     border-bottom: 1px solid $color-mercury;
     flex-direction: column;
     padding-bottom: 4rem;
+    :hover {
+        background-color: $color-alabaster;
+    }
+    @include tablet {
+        flex-direction: row;
+    }
+    @include desktop {
+        flex-direction: row;
+    }
 
 }
 
