--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,6 +2,8 @@
 @use "./partials/fonts" as *;
 @use "./partials/colors" as *;
 
+//{"api_key":"b5af0f5b-bb6b-46ac-9cf2-1e9701b06b8b"}
+
 *, *::before, *::after {
     box-sizing: border-box;
 }
