--- a/styles/global.css
+++ b/styles/global.css
@@ -59,7 +59,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
-  padding: 2rem 0rem 2rem 3rem;
+  padding: 2rem 0rem 2rem 0rem;
   font-size: 1.5rem;
   line-height: 2rem;
   font-weight: 700;
@@ -73,6 +73,7 @@ header {
     flex-direction: row;
     width: 40%;
     padding-bottom: 1rem;
+    margin-left: 2rem;
   }
 }
 @media (min-width: 1200px) {
