--- a/styles/shows.scss
+++ b/styles/shows.scss
@@ -8,18 +8,21 @@
     background-size: cover;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
     justify-content: left;
-    align-items: center;
-    height: 80vh;
+    height: 70vh;
     color: $color-white;
     padding: 1rem;
     @include tablet {
-        height: 130vh;
+        height: 80vh;  
     }
     @include desktop {
-        height: 170vh;
+        height: 100vh; 
     }
     &__album {
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
         font-size: 1rem;
         line-height: 1.5rem;
         font-weight: 500;
@@ -30,10 +33,12 @@
             font-size: 2rem;
             line-height: 2rem;
             font-weight: 600;
-            margin-bottom: -2rem;
+            margin-bottom: 1rem;
         }
         @include desktop {
             justify-content: left;
+            align-items: center;
+            margin: 10rem 0 0 7rem;    
         }
     }
     &__title {
@@ -42,62 +47,52 @@
         font-weight: 600;
         @include tablet {
             font-size: 4rem;
-            line-height: 2.75rem;
+            line-height: 4rem;
             font-weight: 600;
-            margin: 0rem 1rem 0rem 1rem;
+            margin: 0rem 1rem 1rem 1rem;  
         }
         @include desktop {
             font-size: 4rem;
-            line-height: 2.75rem;
-            font-weight: 600;
-            
-            justify-content: left;
-        }
-    }
-    &__title-two {
-        font-size: 2rem;
-        line-height: 3rem; 
-        font-weight: 600;
-        margin-top: -2rem;
-        @include tablet {
-            font-size: 4rem;
-            line-height: 2.75rem;
-            font-weight: 600;
-            margin: 0rem 1rem 0rem 1rem;
-        }
-        @include desktop {
-            font-size: 4rem;
-            line-height: 2.75rem;
+            line-height: 4rem;
             font-weight: 600;
             justify-content: left;
+            align-items: center;
+            margin-left: 8rem;
+            margin-top: 1rem;   
         }
     }
     &__soundcloud-song {
-        width: 100%; 
+        position: absolute;
+        width: 100%;
         height: 30vh;
-        margin: 1rem;
+        bottom: 5rem;
+        left: 0.75rem;
+        
+       
         @include tablet {
-            margin: 2rem;
-            justify-content: center;
+            position: static;
+            height: 30vh;
             width: 100%;
-            height: 40vh;
+           
+            margin-left: 1rem;
         }
         @include desktop {
-            justify-content: right;
+            margin: auto;
+            padding-left: 3rem;
         }
     } 
 }
 
 .buy-tickets-section {
     margin: 1rem;
-    
 }
 
-.show-title {
+.show-title {  
     font-size: 2rem;
     line-height: 2.5rem;
     font-weight: 600;
     padding-top: 1rem;
+    margin-left: 1rem;
     @include tablet {
         font-size: 2.25rem;
         line-height: 2.75rem;
@@ -110,17 +105,14 @@
         line-height: 2.75rem;
         font-weight: 600;
         padding-top: 3rem;
-        padding-left: 6rem;
-       
-    } 
-    
+        padding-left: 6rem;  
+    }
 }
 
 .shows-card {
     display: flex;
     position: relative;
     width: 100%;
-    height: 100%;
     font-size: 1rem;
     font-weight: 600;
     border-bottom: 1px solid $color-mercury;
@@ -131,47 +123,102 @@
     }
     @include tablet {
         flex-direction: row;
-    }
+        margin-left: 1rem;
+        }
     @include desktop {
         flex-direction: row;
+        margin-left: 20rem;
+        }
+    &__date-label {
+        color: $color-silver;
+        font-size: 0.75rem;
+        font-weight: 600;
+        padding: 1rem 0;
+        @include tablet {
+            position: absolute;
+            top: 1rem;
+            left: 0rem;
+        }
     }
-
-}
-
-.date-label {
-    color: $color-silver;
-    font-size: 0.75rem;
-    font-weight: 600;
-    padding: 0.5rem 0;
-}
-
-.venue-label {
-    color: $color-silver;
-    font-size: 0.75rem;
-    font-weight: 600;
-    padding: 0.5rem 0;
-}
-
-.location-label {
-    color: $color-silver;
-    font-size: 0.75rem;
-    font-weight: 600;
-    padding: 0.5rem 0;
-}
-
-.show-button {
-    background-color: $color-bandsite-black;
-    color: $color-white;
-    display: flex;
-    position: absolute;
-    bottom: 0.625rem;
-    width: 100%;
-    justify-content: center;
-    font-weight: 600;
-    font-size: 1rem;
-    border-radius: 0.25rem;;
-    height: 2.5rem;
-    width: 100%;
-    padding: 0.75rem;
-    
+    &__venue-label {
+        color: $color-silver;
+        font-size: 0.75rem;
+        font-weight: 600;
+        padding: 1.5rem 0;
+        @include tablet {
+            position: absolute;
+            top: 0.5rem;
+            left: 12rem;
+           
+        }
+    }
+    &__location-label {
+        color: $color-silver;
+        font-size: 0.75rem;
+        font-weight: 600;
+        padding: 1rem 0 0.5rem 0;
+        @include tablet {
+            position: absolute;
+            top: 1rem;
+            left: 25rem;
+        }
+    }
+    &__show-button {
+        background-color: $color-bandsite-black;
+        color: $color-white;
+        display: flex;
+        position: absolute;
+        bottom: 0.625rem;
+        width: 100%;
+        justify-content: center;
+        font-weight: 600;
+        font-size: 1rem;
+        border-radius: 0.25rem;;
+        height: 2.5rem;
+        width: 100%;
+        padding: 0.75rem;
+        @include tablet {
+            width: 20%;
+            right: 1rem;
+            margin-bottom: 2.5rem;
+            margin-right: 1.5rem;
+        }
+        @include desktop {
+            right: 20rem;
+        }
+    }
+    &__container {
+        margin: 0;
+        @include tablet {
+            display: flex;
+            flex-direction: row;   
+        }
+        @include desktop {
+            flex-direction: row;
+        }
+    }
+    &__container__show-date {
+        margin-top: -7rem;
+        @include tablet {
+            margin-top: 7rem;
+            margin-right: 4rem; 
+        }
+    }
+    &__container__show-venue {
+        margin-top: 2rem;
+        font-weight: 400;
+        @include tablet {
+            margin-top: 7rem;
+            margin-right: 6rem;
+        }
+    }
+    &__container__show-location {
+        margin-top: 2.5rem;
+        font-weight: 400;
+        @include tablet {
+            margin-top: 7rem;
+            margin-right: 6rem;
+        }
+       
+    }
 }
